--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
       
     </video>
     <p class="intro__dek">
-      I looked up the website that records all the air raid alerts since February 2022, when the invasion started. This is the number of air alerts per month in Kyiv and Lviv. People hear the alert at least once a three days.</p>
+      I looked up <a href="https://alerts.in.ua/en"
+      target="_blank">the website</a> that records all the air raid alerts since February 2022, when the invasion started. This is the number of air alerts per month in Kyiv and Lviv. People hear the alert at least once a three days.</p>
     </p>
 
     <iframe title="numbers of air alerts of Kyiv and Lviv by month" aria-label="Interactive line chart" id="datawrapper-chart-6MZpY" src="https://datawrapper.dwcdn.net/6MZpY/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
@@ -1587,7 +1588,7 @@
     <div class="footer-basic">
 
       <footer>
-        <div class="social"><a href="https://twitter.com/mizuhomorioka" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://github.com/mizuhomorioka/comic-project" target="_blank"><i class="icon ion-social-github"></i></a>
+        <div class="social"><a href="https://twitter.com/mizuhomorioka" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://github.com/mizuhomorioka/airalert-project" target="_blank"><i class="icon ion-social-github"></i></a>
         </div>
           
       </footer>
